--- a/MacSimpleDemo/Info.plist
+++ b/MacSimpleDemo/Info.plist
@@ -26,6 +26,10 @@
 	<string>Copyright © 2018年 liyu. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>App要访问你的日历</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>App要访问你的提醒事项</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
